syntax = "proto3";

package elca.ntig.partnerapp.common.proto;

option java_multiple_files = true;
option java_package = "elca.ntig.partnerapp.common.proto.enums.person";

enum SexEnumProto {
  NULL_SEX_ENUM = 0;
  MALE = 1;
  FEMALE = 2;
}